--- a/.github/workflows/check-commits.yml
+++ b/.github/workflows/check-commits.yml
@@ -1,29 +1,30 @@
 name: check-commits
 
 on:
-  pull_request:
-    types: [opened, synchronize]
+  workflow_run:
+    workflows: ["build-and-test"]
+    types:
+      - completed
+    branches-ignore:
+      - 'main'
 
 permissions:
   contents: read
 
 jobs:
-  build:
-    uses: ./.github/workflows/build.yml
   check:
+    if: github.event.workflow_run.conclusion == 'success' && github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize')
     runs-on: ubuntu-latest
-    needs: build
-
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
       - name: Download and Restore Build Artifact
         uses: ./.github/workflows/download-and-restore-artifact.yml
         with:
           os: ubuntu-latest
+          node-version: 22
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
           node-version: 22
       - name: Ensure Git is installed
         run: |
