--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,5 +1,5 @@
 name: build-and-test
-
+run-name: Build and Test
 on:
   push:
     branches: [ main, rc/** ]
@@ -7,7 +7,7 @@ on:
     branches: [ main, rc/**, dev ]
 
 jobs:
-  build:
+  build-test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -28,5 +28,5 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build-${{ runner.os }}-node${{ matrix.node-version }}
+          name: build-${{ matrix.os }}-node-${{ matrix.node-version }}-${{ github.run_id }}
           path: .
