--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,18 @@
 name: release
+run-name: Release
 
 on:
   workflow_run:
-    workflows: ["build-and-test"]
-    types:
-      - completed
+    workflows: [build-and-test]
+    types: [completed]
     branches:
       - 'rc/**'
       - 'main'
 
 jobs:
   main-or-rc:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       contents: write # to be able to publish a GitHub release
       issues: write # to be able to comment on released issues
