chore: update run-name fields in workflows to include context for better clarity

--- a/.github/workflows/add-project.yml
+++ b/.github/workflows/add-project.yml
@@ -1,5 +1,5 @@
 name: add-project
-run-name: Add Project to Issue
+run-name: Add Project to Issue "${{ github.event.issue.title }}"
 
 on:
   issues:
