--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,5 +1,5 @@
-name: code-ql"
-run-name: CodeQL Analysis
+name: code-ql
+run-name: CodeQL Analysis for ${{ github.ref_name }}
 on:
   push:
     branches: [ "main" ]
