--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -1,10 +1,11 @@
 name: pr-release
-run-name: PR Release
+run-name: PR Release for ${{ github.ref_name }}
 
 on:
   workflow_run:
-    workflows: [build-and-test]
-    types: [completed]
+    workflows: ["build-and-test"]
+    types: 
+      - completed
     branches-ignore:
       - 'rc/**'
       - 'main' 
