--- a/.github/workflows/sync-tags.yml
+++ b/.github/workflows/sync-tags.yml
@@ -1,5 +1,5 @@
 name: sync-tags
-run-name: Sync Tags to Dev Branch
+run-name: Sync ${{ github.event.release.tag_name }} tag to Dev
 
 on:
   release:
