--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success' && github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize')
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v4
       - name: Get PR number from commit SHA
