--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -15,30 +15,24 @@ permissions:
   pull-requests: write # permission to comment on PRs
 
 jobs:
-  release:
-    runs-on: ubuntu-latest
+  get-artifact:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    uses: ./.github/workflows/download-and-restore-artifact.yml
+    with:
+      os: ubuntu-latest
+      node-version: 22
+  release:
+    if: ${{ github.event == 'pull_request' }}
+    runs-on: ubuntu-latest
+    needs: get-artifact
     steps:
       - uses: actions/checkout@v4
-      - name: Get PR number from commit SHA
-        id: get_pr
-        run: |
-          PR_NUMBER=$(gh pr list --state open --json number,headRefName --jq ".[] | select(.headRefName == '$HEAD_BRANCH') | .number")
-          echo "pr_number=$PR_NUMBER" >> $GITHUB_OUTPUT
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HEAD_BRANCH: ${{ github.event.workflow_run.head_branch }}
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
-      - name: Download and Restore Build Artifact
-        uses: ./.github/workflows/download-and-restore-artifact.yml
-        with:
-          os: ubuntu-latest
-          node-version: 22
       - name: Generate PR release version
-        run: npx --package=@aurodesignsystem/auro-cli -- auro pr-release -p ${{ steps.get_pr.outputs.pr_number }}
+        run: npx --package=@aurodesignsystem/auro-cli -- auro pr-release -p ${{ github.event.pull_request.number }}
       - name: Publish to NPM
         run: npm publish --registry=https://registry.npmjs.org
         env:
@@ -48,6 +42,6 @@ jobs:
         run: |
           PACKAGE_NAME=$(node -p "require('./package.json').name")
           PACKAGE_VERSION=$(node -p "require('./package.json').version")
-          gh pr comment ${{ steps.get_pr.outputs.pr_number }} -b "🚀 PR Release Published! \`$PACKAGE_NAME@$PACKAGE_VERSION\` [View on npmjs.com](https://www.npmjs.com/package/$PACKAGE_NAME/v/$PACKAGE_VERSION)"
+          gh pr comment ${{ github.event.pull_request.number }} -b "🚀 PR Release Published! \`$PACKAGE_NAME@$PACKAGE_VERSION\` [View on npmjs.com](https://www.npmjs.com/package/$PACKAGE_NAME/v/$PACKAGE_VERSION)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
