--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,9 +9,16 @@ on:
       - 'main'
 
 jobs:
-  main-or-rc:
-    runs-on: ubuntu-latest
+  get-artifact:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    uses: ./.github/workflows/download-and-restore-artifact.yml
+    with:
+      os: ubuntu-latest
+      node-version: 22
+  release:
+    runs-on: ubuntu-latest
+    needs: get-artifact
+    if: ${{ github.event.workflow_run.head_branch == 'main' || startsWith(github.event.workflow_run.head_branch, 'rc/') }}
     permissions:
       contents: write # to be able to publish a GitHub release
       issues: write # to be able to comment on released issues
@@ -22,11 +29,6 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
-      - name: Download and Restore Build Artifact
-        uses: ./.github/workflows/download-and-restore-artifact.yml
-        with:
-          os: ubuntu-latest
           node-version: 22
       - name: Release
         env:
