chore: remove run_id from artifact name for consistency in workflows

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build-${{ matrix.os }}-node-${{ matrix.node-version }}-${{ github.run_id }}
+          name: build-${{ matrix.os }}-node-v${{ matrix.node-version }}
           path: .
