--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,7 +27,7 @@ jobs:
       matrix:
         node-version: [20, 22]
     steps:
-      - uses: ./.github/workflows/reuse/build.yml
+      - uses: "./.github/workflows/reuse/build.yml"
         with:
           os: ubuntu-latest
           node-version: ${{ matrix.node-version }}
@@ -42,7 +42,7 @@ jobs:
       matrix:
         node-version: [20, 22]
     steps:
-      - uses: ./.github/workflows/reuse/test.yml
+      - uses: "./.github/workflows/reuse/test.yml"
         with:
           os: ubuntu-latest
           node-version: ${{ matrix.node-version }}
@@ -86,7 +86,7 @@ jobs:
     # Skip on PR close
     if: github.event.action != 'closed'
     steps:
-      - uses: ./.github/workflows/reuse/check-commits.yml
+      - uses: "./.github/workflows/reuse/check-commits.yml"
         with:
           os: ubuntu-latest
           node-version: 22
@@ -109,13 +109,13 @@ jobs:
           path: ./*
           key: ${{ github.sha }}
       - name: Deploy to Surge
-        uses: ./.github/actions/surge
+        uses: "./.github/actions/surge"
         with:
           action: deploy
           components: "checkbox combobox counter datepicker dropdown form input menu radio select"
           pr-number: ${{ github.event.pull_request.number }}
           demo-dir-pattern: "components/%s/demo"
-          surge-token: ${{ secrets.SURGE_TOKEN }}
+          surge-token: ${{ secrets.AURO_SURGE_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
   surge-teardown:
@@ -126,11 +126,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Teardown from Surge
-        uses: ./.github/actions/surge
+        uses: "./.github/actions/surge"
         with:
           action: teardown
           components: "checkbox combobox counter datepicker dropdown form input menu radio select"
           pr-number: ${{ github.event.pull_request.number }}
           demo-dir-pattern: "components/%s/demo"
-          surge-token: ${{ secrets.SURGE_TOKEN }}
+          surge-token: ${{ secrets.AURO_SURGE_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
