--- a/.github/workflows/reuse/test.yml
+++ b/.github/workflows/reuse/test.yml
@@ -1,4 +1,4 @@
-name: test
+name: Test
 
 on:
   workflow_call:
@@ -10,18 +10,20 @@ on:
         required: true
         type: string
 
-runs-on: ${{ inputs.os }}
-steps:
-  - uses: actions/checkout@v4
-  - name: Setup Node.js
-    uses: actions/setup-node@v4
-    with:
-      node-version: ${{ inputs.node-version }}
-  - name: Setup cache
-    uses: actions/cache@v4
-    id: build-${{ inputs.os }}-node-v${{ inputs.node-version }}
-    with:
-      path: ./*
-      key: ${{ github.sha }}
-  - name: Test
-    run: npm run test
+jobs:
+  test:
+    runs-on: ${{ inputs.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ inputs.node-version }}
+      - name: Setup cache
+        uses: actions/cache@v4
+        id: build-${{ inputs.os }}-node-v${{ inputs.node-version }}
+        with:
+          path: ./*
+          key: ${{ github.sha }}
+      - name: Test
+        run: npm run test
