chore: implement build, test, and check-commits actions; remove reusable workflow files

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,31 +19,28 @@ permissions:
 jobs:
 
   build:
-    name: Build (${{ matrix.node-version }})
+    name: Build
     runs-on: ubuntu-latest
-    # Skip on PR close
-    if: github.event.action != 'closed'
     strategy:
       matrix:
         node-version: [20, 22]
     steps:
-
-    - uses: ./.github/workflows/reuse/build.yml
-      with:
-        os: ubuntu-latest
-        node-version: ${{ matrix.node-version }}
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/build
+        with:
+          os: ubuntu-latest
+          node-version: ${{ matrix.node-version }}
 
   test:
-    name: Test (${{ matrix.node-version }})
+    name: Test
     needs: build
     runs-on: ubuntu-latest
-    # Skip on PR close
-    if: github.event.action != 'closed'
     strategy:
       matrix:
         node-version: [20, 22]
     steps:
-      - uses: ./.github/workflows/reuse/test.yml
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/test
         with:
           os: ubuntu-latest
           node-version: ${{ matrix.node-version }}
@@ -83,16 +80,16 @@ jobs:
   check-commits:
     name: Check Commits
     needs: [build, test]
-    runs-on: ubuntu-latest
-    # Skip on PR close
     if: github.event.action != 'closed'
+    runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/workflows/reuse/check-commits.yml
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/check-commits
         with:
           os: ubuntu-latest
           node-version: 22
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+    env:
+      GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
   preview:
     name: Preview Deployment
     needs: [build, test]
