--- a/.github/actions/check-commits/action.yml
+++ b/.github/actions/check-commits/action.yml
@@ -18,10 +18,10 @@ runs:
         node-version: ${{ inputs.node-version }}
     - name: Setup cache
       uses: actions/cache@v4
-      id: build-${{ inputs.os }}-node-v${{ inputs.node-version }}
+      id: build_cache
       with:
         path: ./*
-        key: ${{ github.sha }}
+        key: build-${{ github.sha }}-${{ inputs.node-version }}
     - name: Ensure Git is installed
       run: |
         which git || (apt-get update && apt-get install -y git)
