--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -18,10 +18,10 @@ runs:
         node-version: ${{ inputs.node-version }}
     - name: Setup cache
       uses: actions/cache@v4
-      id: build-${{ inputs.os }}-node-v${{ inputs.node-version }}
+      id: build_cache
       with:
         path: ./*
-        key: ${{ github.sha }}
+        key: build-${{ github.sha }}-${{ inputs.node-version }}
     - name: Test
       run: npm run test
       shell: bash
