--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,6 +20,7 @@ permissions:
 jobs:
 
   build:
+    if: github.event.action != 'closed'
     name: Build
     runs-on: ubuntu-latest
     strategy:
@@ -33,6 +34,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
   test:
+    if: github.event.action != 'closed'
     name: Test
     needs: build
     runs-on: ubuntu-latest
