--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,7 @@ jobs:
           os: ubuntu-latest
           node-version: 22
   release:
+    name: Release
     runs-on: ubuntu-latest
     needs: [build, test]
     permissions:
@@ -64,7 +65,7 @@ jobs:
         with:
           path: ./*
           key: build-${{ github.sha }}-22
-      - name: Release
+      - name: Semantic release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.ACCESS_TOKEN }}
